--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -50,7 +50,7 @@
             <div class="line">
             </div>
         </div>
-        <span>I built landing pages and several web apps, as well as OOP-based Jump-and-Run-Games with the respective
+        <span class="my-skills-text">I built landing pages and several web apps, as well as OOP-based Jump-and-Run-Games with the respective
             technologies you find listed alongside.
         </span>
         <a href="#contact">
