--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -49,7 +49,7 @@ h1{
 
 .line{
     height: 2px;
-    width: 250px;
+    width: 220px;
     background: #70E61C;
     z-index: 99;
 }
@@ -60,6 +60,10 @@ h1{
     right: 0;
     top: 1030px;
     z-index: 1;
+}
+
+.about-me-left{
+    margin-left: 48px;
 }
 
 @media (min-width: 1600px) {
@@ -81,7 +85,7 @@ h1{
 
 @media (min-width: 1400px) {
     .line{
-        width: 300px !important;
+        width: 270px !important;
     }
 
     .about-me-text-container{
@@ -98,7 +102,7 @@ h1{
 
 @media (max-width: 1100px) {
     .line{
-        width:150px;
+        width:100px;
     }
 }
 
@@ -113,43 +117,53 @@ h1{
         display: none;
     }
 
+    h1{
+        margin-left: 0;
+    }
+
     .purple-shadow{
         display: none;
     }
 
-    .about-me-frame{
-        justify-content: center;
-    } 
-
     .about-me-left{
         display: flex;
-    flex-direction: column;
-    align-items: center;
+        flex-direction: column;
+        margin-left: 96px;
+        margin-right: 124px;
+        width: 100%;
     }
 
     .about-me-text-container{
-        width: 80%;
+        margin-left: 0;
+        width: 100%;
+    }
+
+    .bulb-container, .puzzle-container{
+        img{
+            margin-left: 0; 
+        }
+    }
+}
+
+@media (max-width: 680px) {
+
+    .about-me-left{
+        margin-right: 96px;
+        margin-left: 48px;
     }
 }
 
 @media (max-width: 400px) {
-.about-me-text-container{
-    margin-left: 16px;
-    margin-right: 16px;
-}
 
 h1{
     font-size: 40px;
-    margin-left: 48px;
  }
 
  .about-me-left{
     align-items: flex-start;
+    margin-right: 48px;
  }
 
- .about-me-text{
-        margin-left: 36px;
-    }
  }
 
 
