--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -12,7 +12,7 @@
     a{
         text-decoration: none;
         color:white;
-        margin-right: 32px;
+        margin-left: 32px;
         position: relative;
         &:hover{
             color:rgb(112, 230, 28);
@@ -46,13 +46,13 @@
 }
 
 .link-container{
-    margin-right: 96px;
+    margin-right: 124px;
 }
 
 .burger{
     position: absolute;
     top: 48px;
-    right: 48px;
+    right: 124px;
     display: none;
 }
 
@@ -87,6 +87,16 @@
 @media (max-width: 680px) {
 
     .my-logo{
-        margin-left: 32px;
+        margin-left: 48px;
+    }
+
+    .burger{
+        right: 96px;
+    }
+}
+
+@media (max-width: 400px) {
+    .burger{
+        right: 48px;
     }
 }
