--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,6 +1,6 @@
 .contact-frame{
     display: flex;
-    margin-top: 120px;
+    margin-top: 170px;
 
     // input{
     //     background: rgb(20, 29, 47);
@@ -163,6 +163,7 @@ h1{
     margin-top: 96px;
     position: absolute;
     right: 48px;
+    z-index: 99;
     &:hover{
         display: none;
     }
@@ -173,8 +174,10 @@ h1{
     margin-top: 96px;
     position: absolute;
     right: 48px;
+    z-index: 99;
     &:hover{
         display: block !important;
+        cursor: pointer;
     }
 }
 
