--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -43,5 +43,6 @@
 <div>
     <app-project *ngFor="let project of projects" [project]="project"></app-project>
 </div>
+<div id="contact"></div>
 <img class="purple-shadow2" src="/assets/img/purple-shadow.png" alt="shadow">
 <img class="green-shadow2" src="/assets/img/green-shadow2.png" alt="shadow">
