--- a/src/app/atf/atf.component.html
+++ b/src/app/atf/atf.component.html
@@ -38,10 +38,13 @@
                 <span class="email-address">steffenjoachim.schanze@gmail.com</span>
             </a>
         </div>
+        
         <div class="scroll-down-container">
-            <span id="about-me" class="scrollDown"> Scroll down -></span>
+            <span  class="scrollDown"> Scroll down -></span>
         </div>
+       
     </div>
 </div>
 
 <img class="background-shape" src="/assets/img/background-shape.png">
+<div id="about-me"></div>
