--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -3,6 +3,7 @@
     display: flex;
     align-items: center;
     margin-bottom: 120px;
+    margin-top: 150px;
     z-index: 9;
 }
 
@@ -58,7 +59,7 @@ h1{
     position: absolute;
     height: 400px;
     right: 0;
-    top: 1030px;
+    top: 1150px;
     z-index: 1;
 }
 
