--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -42,7 +42,21 @@
 
 .my-logo{
     height: 15vh;
-    margin-left: 100px;
+    margin-left: 96px;
+    &:hover{
+        transform-origin: center;
+        animation: flipperAnimation 1.5s infinite;
+        animation-direction: alternate;
+    }
+}
+
+@keyframes flipperAnimation {
+  0% {
+    transform: rotateY(0deg);
+  }
+  100% {
+    transform: rotateY(180deg);
+  }
 }
 
 .link-container{
