--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,35 +1,24 @@
 <div class="about-me-frame">
-    <div class="about-me-left">
+    <div class="about-me-left" data-aos="fade-right">
         <h1>About me</h1>
         <div class="about-me-text-container">
-            <span class="about-me-text">I am a German Web Developer with experience in building web apps with JavaScript & Angular. Welcome on
-                my
-                public portfolio. I started my IT journey creating affiliate Websites using Wordpress. Occasionally I
-                had to
-                add
-                something to the html-part. This aroused my interest in programming so that I finally decided to pursue
-                professional training and to build my own projects. I'm looking forward to expanding my experience and
-                starting
-                my career in IT as a junior developer.
+            <span class="about-me-text">I am a German Front End  Web Developer with experience in building web apps with Angular, Typescript  & Firebase and other technologies.  I built the projects on my own as well as in teams using agile project-management methods. Also, I had experienced developers looking for clean coding and setting deadlines for my projects. <br><br>
+                I started my experience in IT creating affiliate Websites. To extend my knowledge,  I finally decided to pursue professional training, which I completed successfully. I'm looking forward to bring my experience to a programming team and starting my career in IT as a junior developer.
             </span>
             <div class="bulb-container">
                 <img src="/assets/img/bulb.svg" alt="bulb icon">
-                <p>I am used to taking responsibility and working diligently, using my skills for the benefit of the
-                    employer, because his success is a condition for my success.
+                <p>I have completed numerous professional projects, including web apps and landing pages with extensive functionalities. I am used to clean coding and keeping tight deadlines. Please scroll down, to see a sample of my work.
                 </p>
             </div>
             <div class="puzzle-container" id="my-skills">
                 <img src="/assets/img/puzzle.svg" alt="bulb icon">
-                <p>I have alway motivated myself to learn new things, to break new grounds, to overcome difficulties and
-                    to
-                    shape my life in a positive way. In programming, I keep learning new technologies, expanding my
-                    knowledge and creating new projects.
+                <p>I had to learn to cope with new tasks several times during my career and overcame difficulties and to shape my life in a positive way.  This attitude helped me learning software development fast.
                 </p>
             </div>
         </div>
     </div> 
     <div class="about-me-right">
-        <img src="/assets/img/ich2.png" alt="picture of myself">
+        <img src="/assets/img/ich2.png" alt="picture of myself" data-aos="zoom-in">
         <div class="line"></div>
     </div>
 </div>
