--- a/src/app/atf/atf.component.html
+++ b/src/app/atf/atf.component.html
@@ -31,7 +31,7 @@
                 <img class="icon-image" src="/assets/img/github-button.png" alt="Github button"></a>
             <a href="#contact">
                 <img class="icon-image" src="/assets/img/mail-button.png" alt="Mail button"></a>
-            <a href="https://www.linkedin.com/in/steffen-schanze-5a136424b/" target="_blank">
+            <a href="https://www.linkedin.com/in/steffen-schanze/" target="_blank">
                 <img class="icon-image" src="/assets/img/linkedin-button.png" alt="Linkedin button">
             </a>
             <a href="#contact" class="sjs-mail">
