--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -1,5 +1,5 @@
 <div class="my-skills-frame">
-    <div class="skills-container">
+    <div class="skills-container" data-aos="fade-right">
         <div class="icon-container">
             <img class="skill-img" src="/assets/img/Angular.png" alt="Angular icon">
             <span>Angular</span>
@@ -44,7 +44,7 @@
     <div class="green-shadow-container">
         <img class="green-shadow" src="/assets/img/green-shadow2.png" alt="shadow">
     </div>
-    <div class="my-skills-container">
+    <div class="my-skills-container" data-aos="fade-left">
         <div class="my-skills-head">
             <h1>My skills</h1>
             <div class="line">
