--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -12,7 +12,7 @@
             <img class="icon" src="/assets/img/github-button.png" alt="Github button"></a>
         <a href="mailto:steffenjoachim.schanze@gmail.com">
             <img class="icon" src="/assets/img/mail-button.png" alt="Mail button"></a>
-        <a href="https://www.linkedin.com/in/steffen-schanze-5a136424b/" target="_blank">
+        <a href="https://www.linkedin.com/in/steffen-schanze/" target="_blank">
             <img class="icon" src="/assets/img/linkedin-button.png" alt="Linkedin button">
         </a>
     </div>
