--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -52,10 +52,10 @@
 
 @keyframes flipperAnimation {
   0% {
-    transform: rotateY(0deg);
+    transform: rotateX(0deg);
   }
   100% {
-    transform: rotateY(180deg);
+    transform: rotateX(180deg);
   }
 }
 
