updated with new project

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -2,7 +2,7 @@
     <div class="about-me-left" data-aos="fade-right">
         <h1>About me</h1>
         <div class="about-me-text-container">
-            <span class="about-me-text">I am a German Front End  Web Developer with experience in building web apps with Angular, Typescript  & Firebase and other technologies.  I built the projects on my own as well as in teams using agile project-management methods. Also, I had experienced developers looking for clean coding and setting deadlines for my projects. <br><br>
+            <span class="about-me-text">I am a German Front End  Web Developer with experience in building web apps with Angular, Typescript, Firebase, Vue.js and other technologies.  I built the projects on my own as well as in teams using agile project-management methods. Also, I had experienced developers looking for clean coding and setting deadlines for my projects. <br><br>
                 I started my experience in IT creating affiliate Websites. To extend my knowledge,  I finally decided to pursue professional training, which I completed successfully. I'm looking forward to bring my experience to a programming team and starting my career in IT as a junior developer.
             </span>
             <div class="bulb-container">
