--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -5,6 +5,12 @@
             <span>Angular</span>
         </div>
         <div class="icon-container">
+            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 32 32" class="white-logo">
+              <path d="M24.306 4.019h-4.806l-3.5 5.537-3-5.537h-11l14 23.981 14-23.981zM5.481 6.019h3.363l7.156 12.387 7.15-12.387h3.363l-10.512 18.012z"/>
+            </svg>
+            <span class="md">Vue.js</span>
+          </div>  
+        <div class="icon-container">
             <img class="skill-img" src="/assets/img/Typescript.png" alt="TypeScript icon">
             <span>TypeScript</span>
         </div>
@@ -39,7 +45,7 @@
         <div class="icon-container">
             <img class="skill-img" src="/assets/img/MD.png" alt="Material Design">
             <span class="md">Material Design</span>
-        </div>
+        </div>        
     </div>
     <div class="green-shadow-container">
         <img class="green-shadow" src="/assets/img/green-shadow2.png" alt="shadow">
