--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -39,6 +39,10 @@
     position: relative;
 }
 
+.white-logo path {
+    fill: white;
+  }
+
 .green-shadow-container{
     position: absolute;
     left: 0;
