--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     margin-bottom: 120px;
-    margin-top: 150px;
+    margin-top: 0;
     z-index: 9;
 }
 
@@ -95,12 +95,13 @@ h1{
     }
 }
 
-
-
-
 @media (min-width: 1400px) {
     .line{
         width: 270px !important;
+    }
+
+    .about-me-frame{
+        margin-top: 0px;
     }
 
     .about-me-text-container{
@@ -123,7 +124,7 @@ h1{
 
 @media (max-width: 1024px) {
     .about-me-frame{
-        margin-top: 500px;
+        margin-top: 300px;
     }
 }
 
